# Copyright 2022 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//bazel:yacl.bzl", "yacl_cc_library", "yacl_cc_test")

package(default_visibility = ["//visibility:public"])

yacl_cc_library(
    name = "executor",
    srcs = ["executor.cc"],
    hdrs = ["executor.h"],
    deps = [
        "//yacl/base:dynamic_bitset",
        "//yacl/base:int128",
        "//yacl/io/circuit:bristol_fashion",
    ],
)

yacl_cc_test(
    name = "executor_test",
    srcs = ["executor_test.cc"],
    data = ["//yacl/io/circuit:circuit_data"],
    deps = [
        "executor",
        "//yacl/crypto/block_cipher:symmetric_crypto",
        "//yacl/crypto/rand",
    ],
)
